レポート書いてる

--- a/docs/論文の検証/pilot_study.ipynb
+++ b/docs/論文の検証/pilot_study.ipynb
@@ -4,10 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 予備実験\n",
+    "# 非線形結合モード方程式の解析解法の発見\n",
     "\n",
-    "周期分極反転のSHG効率の公式の発見\n",
-    "\n",
+    "* **着目した点**: 論文で行われている計算から、微分方程式の解の探索に使えそうである点に着目した\n",
+    "* **行った実装**: 非線形結合モード方程式の解析的解法に屈折率の分散式を含めた、SHG変換効率の波長とドメイン幅依存性の探索コードを実装、変換効率の計算では自作ライブラリを使用\n",
+    "* **何が明確になったか**: 変換効率のピーク位置と帯域幅を近似できる関数を発見できることが明確になった。波打つ性質も捉えようと思った時に、MSE以外の誤差評価も試してみるべきであることが明確になった"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 背景\n",
     "### 非線形結合モード方程式\n",
     "\n",
@@ -296,6 +303,7 @@
     "MAX_NPARAMS = 10\n",
     "\n",
     "\n",
+    "# LLM-SR 6000 回ぐらい回して gemini3:12b が発見した関数\n",
     "def equation(width: np.ndarray, wavelength: np.ndarray, params: np.ndarray) -> np.ndarray:\n",
     "    \"\"\" Mathematical function for shg efficiency\n",
     "\n",
