ノート追加

--- a/docs/変更点改良点.md
+++ b/docs/変更点改良点.md
@@ -12,4 +12,4 @@
 * 並列処理に変更し、num_parallelsを指定できるようにした
 * np.random.choice で重複選択ができないようにした
 * numpyではなくjaxを用いた検証を行っている
-    * 論文ではnumpyでも自動微分が欲しいとあったが、jax.numpyなら自動微分ある
+    * jax.numpyなら自動微分ある
