--- a/docs/自分の言葉で説明.md
+++ b/docs/自分の言葉で説明.md
@@ -1,8 +1,56 @@
-# 従来手法との違い
+# 従来手法との違い、新しさ
+
+* funsearch の手法を Symbolic Regression に適用している (従来手法はサブツリーミューテーションなど)
+    * 遺伝的アルゴリズムを使いつつ、係数はオプティマイザで同定して、LLMを用いて変異させる、という全体の流れが新しい
+    * 機械学習を使った手法としてNeSymReSがあるけど、遺伝的アルゴリズムを行っていない
+    * 遺伝的アルゴリズムを行う従来手法(PySRなど)は係数だけオプティマイザで同定することはしてない
+    * funsearch は数式を対象としていない
+* 性能評価をくわしく行っている
+    * PPL を評価している
+    * ノイズとか評価している
 
 # 使用されている論理的アプローチ
 
-# 新しさ
+* 進化的アルゴリズム、島アルゴリズム
+* スコアのボルツマン分布に従って変異用サンプルを選択
+* オッカムの剃刀の原則でクラスタから関数を選択
+* LLMで変異
+* オプティマイザで係数同定
+* PPLというのをつかっためっちゃ詳しい評価をしてる
+    * モデルが知らない結果を発見できることを示そうとしている
+    * 関数探索のフレームワークとして数学的に有用であることを示そうとしている
+    
+## PPLについて
+ollama とか使ってると確率分布もセットで返してくれるので、以下のような計算ができる
+
+```
+正確に数式的に表現すると、以下のようになります。
+
+1.  **文脈 (Context) を C とする。**
+2.  **正解方程式のトークン列を t₁, t₂, t₃, ..., t<0xE2><0x82><0x99> とする。**
+3.  **各ステップで以下の条件付き確率を計算する:**
+    *   P(t₁ | C) ：文脈Cのもとで、最初のトークンt₁が出現する確率
+    *   P(t₂ | C, t₁) ：文脈Cとトークンt₁のもとで、2番目のトークンt₂が出現する確率
+    *   P(t₃ | C, t₁, t₂) ：文脈Cとトークンt₁, t₂のもとで、3番目のトークンt₃が出現する確率
+    *   ...
+    *   P(t<0xE2><0x82><0x99> | C, t₁, ..., t<0xE2><0x82><0x99>₋₁) ：それまでの文脈とトークン列のもとで、最後のトークンt<0xE2><0x82><0x99>が出現する確率
+4.  **それぞれの確率の対数を取る:**
+    *   log P(t₁ | C)
+    *   log P(t₂ | C, t₁)
+    *   log P(t₃ | C, t₁, t₂)
+    *   ...
+    *   log P(t<0xE2><0x82><0x99> | C, t₁, ..., t<0xE2><0x82><0x99>₋₁)
+5.  **対数確率の合計を計算する:**
+    *   Sum = Σᵢ<0xE1><0xB5><0xA3>₁<0xE1><0xB5><0xA3> log P(tᵢ | C, t₁, ..., tᵢ₋₁)
+6.  **合計をトークン数 N で割る（対数確率の平均を計算する）:**
+    *   AvgLogProb = Sum / N
+
+**Perplexity (PPL) は、この「対数確率の平均」にマイナスをつけて指数関数 (exp) を取ったものです。**
+
+*   **PPL = exp(- AvgLogProb) = exp { - (1/N) * Σᵢ<0xE1><0xB5><0xA3>₁<0xE1><0xB5><0xA3> log P(tᵢ | C, t₁, ..., tᵢ₋₁) }**
+
+「それぞれの確率の対数とってNでわる感じか」というのは、`AvgLogProb` （対数確率の平均）を計算する部分です。Perplexityはその値を使って最終的に計算される指標となります。
+```
 
 # 自分が研究を進めている分野への適用可能性
 以下の三つの適用方法を考えた
