numpyにしてnpdaもっかい試す。データセットの改良とか合わせてやろうかなぁ、優先順位わからん。

--- a/docs/論文の検証/pilot_study.ipynb
+++ b/docs/論文の検証/pilot_study.ipynb
@@ -8,14 +8,22 @@
     "\n",
     "* **着目した点**: 論文で行われている計算から、微分方程式の解の探索に使えそうである点に着目した\n",
     "* **行った実装**: 非線形結合モード方程式の解析的解法に屈折率の分散式を含めた、SHG変換効率の波長とドメイン幅依存性の探索コードを実装、変換効率の計算では自作ライブラリを使用\n",
-    "* **何が明確になったか**: 変換効率のピーク位置と帯域幅を近似できる関数を発見できることが明確になった。波打つ性質も捉えようと思った時に、MSE以外の誤差評価も試してみるべきであることが明確になった"
+    "* **何が明確になったか**: 変換効率のピーク位置と帯域幅を近似できる関数を発見できることが明確になった。波打つ性質も捉えようと思った時に、MSE以外の誤差評価も試してみるべきであることが明確になった\n",
+    "\n",
+    "## 考察\n",
+    "本家のLLM-SR+gemma3:12bだと6000回で0.06まで下がる関数が発見できたが、自作のほうだと7000回やっても0.4ぐらいまでしかさがらない\n",
+    "\n",
+    "bfgsで本家が発見した関数の係数同定を行ったところ収束したが、lbfgsだと大域最小値に収束できないことや、qwen2.5がMAX_NPARAMSを無視していることが原因だと思われる\n",
+    "\n",
+    "jaxopt で bfgs 試してもうまくいかなくて gemini に聞いたら 64bit の設定をしろと言われて設定したら治った神すぎる"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 背景\n",
+    "# 詳細説明\n",
+    "\n",
     "### 非線形結合モード方程式\n",
     "\n",
     "SHGデバイスでは以下の非線形結合モード方程式が成り立つ\n",
@@ -106,9 +114,9 @@
     "\n",
     "今回MgO:SLTについてのセルマイヤー方程式を考える\n",
     "\n",
-    "## 関数同定\n",
+    "### 関数同定\n",
     "\n",
-    "500個の分極反転ドメインからなるMgO:SLTの変換効率の波長とドメイン幅依存性をLLM-SRで探索した\n",
+    "500個の分極反転ドメインからなるMgO:SLTの変換効率の波長とドメイン幅依存性を表す関数をLLM-SRで探索した\n",
     "\n",
     "### 結果"
    ]
@@ -299,6 +307,7 @@
    "source": [
     "import numpy as np\n",
     "from typing import Callable\n",
+    "from scipy.optimize import minimize\n",
     "\n",
     "MAX_NPARAMS = 10\n",
     "\n",
@@ -354,9 +363,6 @@
     "    # Load data observations\n",
     "    inputs, outputs = data['inputs'], data['outputs']\n",
     "    width, wavelength = inputs[:, 0], inputs[:, 1]\n",
-    "\n",
-    "    # Optimize parameters based on data\n",
-    "    from scipy.optimize import minimize\n",
     "\n",
     "    def loss(params):\n",
     "        y_pred = equation(width, wavelength, params)\n",
