--- a/docs/変更点改良点.md
+++ b/docs/変更点改良点.md
@@ -13,3 +13,6 @@
 * np.random.choice で重複選択ができないようにした
 * numpyではなくjaxを用いた検証を行っている
     * jax.numpyなら自動微分ある
+    
+# その他
+clustering条件変えようかと思ったけど、動かしてみたら以外と全く同じ誤差に落ち着く関数が結構出現することに気づいてそのままにした
