記録を追加した

--- a/docs/自分の言葉で説明.md
+++ b/docs/自分の言葉で説明.md
@@ -4,7 +4,8 @@
     * 遺伝的アルゴリズムを使いつつ、係数はオプティマイザで同定して、LLMを用いて変異させる、という全体の流れが新しい
     * 機械学習を使った手法としてNeSymReSがあるけど、遺伝的アルゴリズムを行っていない
     * 遺伝的アルゴリズムを行う従来手法(PySRなど)は係数だけオプティマイザで同定することはしてない
-    * funsearch は数式を対象としていない
+    * funsearch は数式を対象としていないし係数同定でオプティマイザとかやってないしスコア比較で勝ってる
+    * LMXは物理的意味の情報があんまりなさそう
 * 性能評価をくわしく行っている
     * PPL を評価している
     * ノイズとか評価している
@@ -75,6 +76,8 @@ gemini3:12bはもとからshgやNPDAについて知識があるが、qwen2.5-cod
 
 LLM がある程度知識持ってるおかげで探索が速いとすれば、qwen2.5-coderでは全く見つからない可能性もあると思ったけど、以外といいスコア出現してきてる
 
+evaluator の問題直したらほぼ正解の関数を603回でqwenが発見できた
+
 ## スペクトル分布の広帯域化のための分極反転ドメイン幅構造の探索
 
 自身の研究の本題であるスペクトル分布を広帯域にする分極反転ドメイン幅関数および構造決定アルゴリズムの探索でのevaluateでは、事前にデータセットを用意することが不可能
@@ -83,4 +86,4 @@ LLM がある程度知識持ってるおかげで探索が速いとすれば、q
 
 ## 屈折率分散の設計
 
-量子井戸構造等を使って$n(\lambda)$を変化させることができるとして、どのように材料設計すれば広帯域化ができるかを併せて探索できるかもしれない (マテリアルインフォマティクスっぽさが強い)
+周期分極反転構造なら変換効率はすぐ計算できる、ここで量子井戸構造等を使って$n(\lambda)$を変化させることができるならば、どのように材料設計すれば広帯域化ができるか探索できそう
