--- a/docs/変更点改良点.md
+++ b/docs/変更点改良点.md
@@ -1,6 +1,6 @@
 # 変更点
 
-* 状態ベースの設計から振る舞いベースのイベント駆動に変更し、依存性の逆転と責務の分離を行った
+* 状態ベースの設計から振る舞いベースのイベント駆動に変更し、Clean Architectureに基づいて依存性の逆転と責務の分離を行った
 
 # 改良点
 
@@ -13,6 +13,9 @@
 * np.random.choice で重複選択ができないようにした
 * numpyではなくjaxを用いた検証を行っている
     * jax.numpyなら自動微分ある
+* generics を用いた型の保証
+    * evaluatorがスケルトンも引数で受け取るようにして、定義されるequationの型とevaluatorに渡されるスケルトンの型が一致することを generics で保証している
+    * evaluatorでデータセットの値などを使用したい場合に、evaluatorの型と実際に開始時に渡されるデータセットの型が一致することを generics で保証している
     
 # その他
 clustering条件変えようかと思ったけど、動かしてみたら以外と全く同じ誤差に落ち着く関数が結構出現することに気づいてそのままにした
