--- a/docs/論文の検証/pilot_study.ipynb
+++ b/docs/論文の検証/pilot_study.ipynb
@@ -12,7 +12,7 @@
     "    * シナリオとして、NPDAを用いた近似式がわかっていない状況で、非線形結合モード方程式を数値的に解いて得られたデータから、近似式を発見できるかどうかの実験を行った\n",
     "        * NPDAやSHGの知識が全くないモデルを使用して高精度な近似公式の発見に成功した\n",
     "        * 発見された式は教科書と違う形式をとっているにもかかわらず、データセット内外の条件で高精度に近似できている\n",
-    "    * モデルの事前知識に関係なく公式が発見できることがある、という論文の趣旨が正しいことや、リファクタリング後のコードのほうが探索効率が良いことが直感的に明確になった\n",
+    "    * モデルの事前知識に関係なく公式が発見できることがある、という論文の趣旨が正しいことや、リファクタリング後のコードのほうが探索効率が良いことが明確になった\n",
     "\n",
     "# 探索条件 (リファクタリング後)\n",
     "最後にsinc関数の二乗を計算する必要があることだけをコンテキストで伝えて、自作のプログラムでqwen2.5-coderで探索すると、603回で誤差0.001の式が見つかった\n",
@@ -182,15 +182,21 @@
     "```python\n",
     "def use_material(wavelength: shg.Wavelength, t: shg.T) -> shg.PhaseMismatchFn:\n",
     "    \"\"\"\n",
-    "    MgO:SLT 周期分極構造の幅リストからPPMgOSLTのパラメータを計算する関数\n",
+    "    MgO:SLT材料における、指定された波長と温度での位相不整合関数を計算します。\n",
+    "\n",
+    "    この関数は、MgO:SLTの異常光線(extraordinary ray)に対する\n",
+    "    温度依存のセルマイヤー方程式を用いて、基本波(ω)と\n",
+    "    第二高調波(2ω)の屈折率を計算し、それらから単位長さあたりの\n",
+    "    位相不整合 Δβ = β(2ω) - 2β(ω) を求めます。\n",
     "\n",
     "    Args:\n",
-    "        widths: 分極ドメインの幅リスト (m)\n",
-    "        kappa_magnitude: 非線形結合係数の大きさ\n",
+    "        wavelength: 基本波の波長 (µm)。\n",
+    "        t: 材料の温度 (摂氏)。\n",
     "\n",
     "    Returns:\n",
-    "        kappa_magnitude: 非線形結合係数の大きさ (constant)\n",
-    "        phase_mismatch: 波長と温度に依存する位相不整合関数\n",
+    "        位相不整合関数 (shg.PhaseMismatchFn)。\n",
+    "        この関数は距離 `z` (µm) を引数に取り、\n",
+    "        その地点での累積位相不整合量 `Δβ * z` (ラジアン) を返します。\n",
     "    \"\"\"\n",
     "    # 材料パラメータ\n",
     "    params = {\n",
