--- a/docs/論文の検証/pilot_study.ipynb
+++ b/docs/論文の検証/pilot_study.ipynb
@@ -739,7 +739,7 @@
     "\n",
     "そこに気づいてコードを直して実行したら、高精度に近似できる式が発見された。本家で見つけようと頑張った時はヒントを徐々に増やした結果ヒントマシマシにして初めて探索に成功したけど、今回はヒントがとても少ないにも関わらずすぐに見つかった\n",
     "\n",
-    "改良前のプログラムではパースエラーが多発していた。しかし改良後のプログラムでは、2時間半のテスト実行において発生したパースエラーは3件のみであり、いずれも括弧の間違いなどの回復不能な構文エラーでした\n",
+    "改良前のプログラムではパースエラーが多発していた。しかし改良後のプログラムでは、2時間半のテスト実行において発生したパースエラーは3件のみであり、いずれも括弧の間違いなどの回復不能な構文エラーだった。\n",
     "\n",
     "以下の写真のように、SHGについての事前知識があるGemmaを使って探索した時よりも、全然知識がないqwenを使って探索したほうがより少ない試行回数でより良い関数を発見することができた\n",
     "\n",
@@ -749,7 +749,7 @@
     "## gemma3:12bのSHGに関する知識\n",
     "![image-2.png](./gemmaのSHG知識.png)\n",
     "\n",
-    "MgO:SLTの周期分極反転構造の変換効率の波長とドメイン幅依存性の式はそもそもどこにも載ってない式ので、LLM-SRが未知の関数を発見できる可能性を示唆している\n"
+    "MgO:SLTの周期分極反転構造の変換効率の波長とドメイン幅依存性の式はそもそもどこにも載ってない式なので、LLM-SRが未知の関数を発見できる可能性を示唆している\n"
    ]
   }
  ],
