--- a/docs/変更点改良点.md
+++ b/docs/変更点改良点.md
@@ -13,9 +13,9 @@
 * np.random.choice で重複選択ができないようにした
 * numpyではなくjaxを用いた検証を行っている
     * jax.numpyなら自動微分ある
-* generics を用いた型の保証
-    * evaluatorがスケルトンも引数で受け取るようにして、定義されるequationの型とevaluatorに渡されるスケルトンの型が一致することを generics で保証している
-    * evaluatorでデータセットの値などを使用したい場合に、evaluatorの型と実際に開始時に渡されるデータセットの型が一致することを generics で保証している
+* generics を用いた型の推論
+    * evaluatorに渡されるスケルトンの型を、最初に渡されるequationの型から推論している
+    * evaluatorがオプティマイズで使用するデータの型を、初期設定で渡されるデータの型から推論している
     
 # その他
 clustering条件変えようかと思ったけど、動かしてみたら以外と全く同じ誤差に落ち着く関数が結構出現することに気づいてそのままにした
