次やること考えてる

--- a/docs/論文の検証/pilot_study.ipynb
+++ b/docs/論文の検証/pilot_study.ipynb
@@ -743,11 +743,13 @@
     "\n",
     "以下の写真のように、SHGについての事前知識があるGemmaを使って探索した時よりも、全然知識がないqwenを使って探索したほうがより少ない試行回数でより良い関数を発見することができた\n",
     "\n",
-    "## qwen2.5-coderのSHGに関する知識 (すべて誤り)\n",
-    "![image.png](./qwenのSHG知識.png)\n",
-    "\n",
     "## gemma3:12bのSHGに関する知識\n",
     "![image-2.png](./gemmaのSHG知識.png)\n",
+    "\n",
+    "## qwen2.5-coderのSHGに関する知識\n",
+    "![image.png](./qwenのSHG知識.png)\n",
+    "\n",
+    "qwenはSHGの意味わかってないのにプロンプトに正式名称がSecond Harmonic Generationであることを書き忘れていた、結果的に見つかったが書くべきだった\n",
     "\n",
     "MgO:SLTの周期分極反転構造の変換効率の波長とドメイン幅依存性の式はそもそもどこにも載ってない式なので、LLM-SRが未知の関数を発見できる可能性を示唆している\n"
    ]
