公式全部やっといた

--- a/docs/自分の言葉で説明.md
+++ b/docs/自分の言葉で説明.md
@@ -5,10 +5,20 @@
     * 機械学習を使った手法としてNeSymReSがあるけど、遺伝的アルゴリズムを行っていない
     * 遺伝的アルゴリズムを行う従来手法(PySRなど)は係数だけオプティマイザで同定することはしてない
     * funsearch は数式を対象としていないし係数同定でオプティマイザとかやってないしスコア比較で勝ってる
-    * LMXは物理的意味の情報があんまりなさそう
+    * LMXみてれない
 * 性能評価をくわしく行っている
     * PPL を評価している
     * ノイズとか評価している
+    
+## LMXとの比較
+```
+LMX (Meyerson et al., 2023) has included symbolic regression as one of its experimental tasks,
+though primarily as a proof-of-concept rather than aiming to achieve state-of-the-art performance.
+Their implementation does not incorporate domain-specific prior knowledge, generates complete
+equations with LLM instead of optimizable skeletons, uses older LLM models (Galactica, Pythia),
+and lacks several design elements present in LLM-SR such as equation-as-program representation
+and multi-island dynamic memory management for diverse exploration
+```
 
 # 使用されている論理的アプローチ
 
