OODに対して精度いいっぽいから条件固定でフラット探索して万能な公式発見できたらいいな

--- a/docs/論文の検証/pilot_study.ipynb
+++ b/docs/論文の検証/pilot_study.ipynb
@@ -649,7 +649,13 @@
     "*   $\\text{sinc}(x)$: numpyのsinc関数 ($\\frac{\\sin(\\pi x)}{\\pi x}$)\n",
     "\n",
     "**注意:**\n",
-    "`numpy.sinc(x)` は $\\frac{\\sin(\\pi x)}{\\pi x}$ と定義されています。物理学の文脈によっては $\\frac{\\sin(x)}{x}$ をsinc関数と呼ぶ場合もあるため、ご注意ください。この数式は `numpy.sinc` の定義に基づいています。"
+    "`numpy.sinc(x)` は $\\frac{\\sin(\\pi x)}{\\pi x}$ と定義されています。物理学の文脈によっては $\\frac{\\sin(x)}{x}$ をsinc関数と呼ぶ場合もあるため、ご注意ください。この数式は `numpy.sinc` の定義に基づいています。\n",
+    "\n",
+    "## TODO\n",
+    "* sincの項だけだとどれぐらい近似できてる？摂動項の意味は？\n",
+    "* p1~8がどういう物理量に相当しているか調べたい\n",
+    "* p2 が素子長っぽい\n",
+    "* 元の式で条件振ってみて、オプティマイズ後のパラメータがどう変化するか調べることに物理的な意味がありそう"
    ]
   },
   {
