sinc^2が係数同定できない説あってめっちゃ困った

--- a/docs/論文の検証/pilot_study.ipynb
+++ b/docs/論文の検証/pilot_study.ipynb
@@ -251,21 +251,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-05 14:16:23.772708: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-04-07 10:21:59.881823: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1743862583.793236   81030 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1743862583.799406   81030 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1743862583.816316   81030 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1743862583.816338   81030 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1743862583.816340   81030 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1743862583.816342   81030 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
+      "E0000 00:00:1744021319.901436    2748 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1744021319.907417    2748 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1744021319.921998    2748 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744021319.922016    2748 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744021319.922033    2748 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1744021319.922036    2748 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
      ]
     },
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
     "        return np.mean((y_pred - outputs) ** 2)\n",
     "\n",
     "    def loss_partial(params): return loss(params)\n",
-    "    result = minimize(loss_partial, [1.0]*MAX_NPARAMS, method='BFGS')\n",
+    "    result = minimize(loss_partial, [1.0]*MAX_NPARAMS, method=\"BFGS\",)\n",
     "\n",
     "    # Return evaluation score\n",
     "    optimized_params = result.x\n",
@@ -757,7 +757,19 @@
     "\n",
     "qwenはSHGの意味わかってないのにプロンプトに正式名称がSecond Harmonic Generationであることを書き忘れていた、結果的に見つかったが書くべきだった\n",
     "\n",
-    "MgO:SLTの周期分極反転構造の変換効率の波長とドメイン幅依存性の式はそもそもどこにも載ってない式なので、LLM-SRが未知の関数を発見できる可能性を示唆している\n"
+    "MgO:SLTの周期分極反転構造の変換効率の波長とドメイン幅依存性の式はそもそもどこにも載ってない式なので、LLM-SRが未知の関数を発見できる可能性を示唆している\n",
+    "\n",
+    "波長範囲が狭すぎる時にセルマイヤーの分散式のNの計算部分がほぼ定数の可能性出てきた\n",
+    "\n",
+    "試しに摂動の項をはずして分布かいたら結構違う結果になるからやっぱなんか意味ありそう\n",
+    "\n",
+    "正しい係数で固定してから摂動項とってsincだけ計算したら普通に同じ図になった、摂動項なしではbfgsが係数の決定に失敗するっぽい\n",
+    "\n",
+    "摂動項は正しい係数では出力に影響がなく、係数の決定のためだけに必要という状況になっているのはかなり不思議である\n",
+    "\n",
+    "いろいろ調べた結果、大域的に最適なパラメータを求めるためにはbasinhopping等が必須らしい、波の係数のオプティマイズできないのきつくね？\n",
+    "\n",
+    "ベイスンホッピング法がいいらしい"
    ]
   }
  ],
