オプティマイザの問題致命的すぎてまじで困った

--- a/docs/論文の検証/pilot_study.ipynb
+++ b/docs/論文の検証/pilot_study.ipynb
@@ -655,7 +655,11 @@
     "* sincの項だけだとどれぐらい近似できてる？摂動項の意味は？\n",
     "* p1~8がどういう物理量に相当しているか調べたい\n",
     "* p2 が素子長っぽい\n",
-    "* 元の式で条件振ってみて、オプティマイズ後のパラメータがどう変化するか調べることに物理的な意味がありそう"
+    "* 元の式で条件振ってみて、オプティマイズ後のパラメータがどう変化するか調べることに物理的な意味がありそう\n",
+    "\n",
+    "## DONE\n",
+    "* 考えてる波長帯が狭すぎて_n_effで計算されるNがほぼ定数になっている、ここを固定すれば第一項のsincの部分だけで完全に正しい式になっている\n",
+    "* 後ろの項は係数同定を可能にするためだけについており、正しい係数の時だけほぼゼロになる性質を持っている、オプティマイザの目的関数における局所最適解をもつランドスケープを滑らかにする効果を持っているのかもしれない、確認が必要"
    ]
   },
   {
@@ -663,7 +667,7 @@
    "metadata": {},
    "source": [
     "## 探索条件 (リファクタリング前)\n",
-    "自作プログラムではなくLLM-SRを用いた実験でも、ヒントを沢山追加した上で、gemma3:12bを用いて、低精度の近似式の発見には成功している\n",
+    "自作プログラムではなくLLM-SRを用いた実験でも、ヒントを沢山追加した上で、gemma3:12bを用いて、低精度の近似式ならギリ見つかった\n",
     "\n",
     "ヒントが少ないとなんど試しても見つからなかったのでどんどん追加していった結果、以下のプロンプトで6000回以上探索して、誤差0.06の `equation_old` が見つかった\n",
     "\n",
@@ -761,15 +765,13 @@
     "\n",
     "波長範囲が狭すぎる時にセルマイヤーの分散式のNの計算部分がほぼ定数の可能性出てきた\n",
     "\n",
-    "試しに摂動の項をはずして分布かいたら結構違う結果になるからやっぱなんか意味ありそう\n",
-    "\n",
     "正しい係数で固定してから摂動項とってsincだけ計算したら普通に同じ図になった、摂動項なしではbfgsが係数の決定に失敗するっぽい\n",
     "\n",
     "摂動項は正しい係数では出力に影響がなく、係数の決定のためだけに必要という状況になっているのはかなり不思議である\n",
     "\n",
     "いろいろ調べた結果、大域的に最適なパラメータを求めるためにはbasinhopping等が必須らしい、波の係数のオプティマイズできないのきつくね？\n",
     "\n",
-    "ベイスンホッピング法がいいらしい"
+    "ベイスンホッピングやっても見つからないまじで困った"
    ]
   }
  ],
