--- a/docs/事業の観点での説明.md
+++ b/docs/事業の観点での説明.md
@@ -63,11 +63,10 @@ evaluateをGPUでやる場合は意味ない、cpuでやる場合ちょっと意
 * 非同期島モデルの実装
     * 既存のLLMを用いて速く提供することに直結する
 * オプティマイザの改善
-    * 変換効率の式の目的関数を最適化できない
-    * bactgrowでもoodとidのデータセットに対して目的関数を最適化できない
-    * これのせいで最適化できないパターンが結構あるのなら、数理最適化頑張ってなんとかしてほしい
-    * 目的関数における局所最適解をもつランドスケープを滑らかにする効果をもった摂動項の存在について
-    * ちょっと難しすぎる気もする...
+    * 変換効率の式の目的関数や、geminiが発見したbactgrowのoodとidに対しての目的関数が様々なアルゴリズムで最適化できない問題が発生している
+    * 対策しないと、一部のお客さんに適切な数式を引き当てることができない
+    * 目的関数における局所最適解をもつランドスケープを滑らかにする効果をもった摂動項の存在について考察してオプティマイザの改良考える
+    * ちょっと難しすぎる気もする
 
 # 今の課題に対して
 純粋なLLMとの応答意外でなんか改良したいらしい
