思いついたアイデアまとめた

--- a/docs/事業の観点での説明.md
+++ b/docs/事業の観点での説明.md
@@ -60,13 +60,27 @@ evaluateをGPUでやる場合は意味ない、cpuでやる場合ちょっと意
 
 # いただいた点の方針について、どのように判断し何を選んだか
 
-* 非同期島モデルの実装
-    * 既存のLLMを用いて速く提供することに直結する
+* 非同期型島モデルの実装
+    * より高精度な関数同定を可能にし、既存のLLMを用いてより高い提供することにつながるかもしれない
+    * 他の島のマイグレーションポイントへの到達を待たなくていいならちょっとは高速化する気がする
 * オプティマイザの改善
     * 変換効率の式の目的関数や、geminiが発見したbactgrowのoodとidに対しての目的関数が様々なアルゴリズムで最適化できない問題が発生している
     * 対策しないと、一部のお客さんに適切な数式を引き当てることができない
     * 目的関数における局所最適解をもつランドスケープを滑らかにする効果をもった摂動項の存在について考察してオプティマイザの改良考える
     * ちょっと難しすぎる気もする
+* 係数の物理的な対応を自動で調べる
+    * 項じゃなくてparam方も、なんらかの物理定数に対応してそう、物理定数をいじってparamsの変化を見て対応を調べるところ自動でできたら個人的にも嬉しい
+* ファインチューニング
+    * 既存のLLMをつかってファインチューニング
+    * AI Agentの独自性と言えばこれ、Takumiを参考にできないか考えてる
+    * プロンプトの改良で何とかなってるのでまだ改良点思い浮かんでない
+* Lazy Evalulator
+    * データセットがあるときという指示がでてはいるけど、これは個人的にもやりたい
+    * SHGの広帯域化のように、データセット無くてもLLM-SRで関数発見したいユースケースあるので、需要拡大
+    * evaluator書くときにarg無視して内部的に完結するもの書くだけでLLM-SRのコードでもできるからコードなにも変更しなくてもできる
+    * funsearchのほうはもとからデータセットなしでやってる
+    * evaluateに時間かかり始めるとアルゴリズムを工夫する必要でてきて独自性を発揮する余地大いにあるし非同期島モデルにもつながる
+    * (関係ないけど競技プログラミング自動化してみたいどこまで解けるか気になる)
 
 # 今の課題に対して
 純粋なLLMとの応答意外でなんか改良したいらしい
@@ -75,9 +89,9 @@ evaluateをGPUでやる場合は意味ない、cpuでやる場合ちょっと意
     * 既存のLLM (ファインチューニングは既存のLLM使ってるからいいかな)
     * データ軸は指定済、Agentみたいに動的に指定してくのも、Takumiっぽくていいと思うが
     
-式をどうかえたらどう変化した、みたいな情報をもうちょいコンテキストに含めたい気がする evaluator があることなどを知ってもらってファインチューニングはめっちゃやってみたい、普通に関数同定してる最中にエラーはいた出力を片っ端から反面教師にしてファインチューニングすれば良いのでは？あとは成功例を片っ端から教師にしてファインチューニング。入出力と正誤わかってるから無限にファインチューニングできる気がする、ニッチな分野でLLMがしらない式とかを正解としてファインチューニングしたい気がする
+式をどうかえたらどう変化した、みたいな情報をもうちょいコンテキストに含めたい気がする evaluator があることなどを知ってもらってのファインチューニングはちょっとやってみたい、普通に関数同定してる最中にエラーはいた出力を片っ端から反面教師にしてファインチューニングすれば良いのでは？あとは成功例を片っ端から教師にしてファインチューニング。入出力と正誤わかってるから無限にファインチューニングできる気がする、ニッチな分野でLLMがしらない式とかを正解としてファインチューニングしたい気がする
 
-gemini flashでも結構書き間違いが多かった、プロンプト改良するよりファインチューニングしたほうがよい
+gemini flashでも結構書き間違いが多かった、プロンプト改良するよりファインチューニングしたほうがよい、と思ったけどファインチューニングでpythonの文法ミス治るんだったらgoogleがもうやってる気がするから難しいのかも
 
 プロンプト改良と非同期島モデルぐらいしか思いつかん、あとはRAGとか、複数LLMのアンサンブル、探索仮定の詳細な報告で安心感(いらんかも)
 
