アイデアまとまらんけど、とりあえず考えた

--- a/docs/事業の観点での説明.md
+++ b/docs/事業の観点での説明.md
@@ -68,6 +68,8 @@ evaluateをGPUでやる場合は意味ない、cpuでやる場合ちょっと意
     * 対策しないと、一部のお客さんに適切な数式を引き当てることができない
     * 目的関数における局所最適解をもつランドスケープを滑らかにする効果をもった摂動項の存在について考察してオプティマイザの改良考える
     * ちょっと難しすぎる気もする
+    * 誤差関数でMSE以外を使ってみるとうまく収束できる可能性もある
+        * ワッサースタイン距離ってなんだ？
 * 係数の物理的な対応を自動で調べる
     * 項じゃなくてparam方も、なんらかの物理定数に対応してそう、物理定数をいじってparamsの変化を見て対応を調べるところ自動でできたら個人的にも嬉しい
 * ファインチューニング
@@ -81,6 +83,19 @@ evaluateをGPUでやる場合は意味ない、cpuでやる場合ちょっと意
     * funsearchのほうはもとからデータセットなしでやってる
     * evaluateに時間かかり始めるとアルゴリズムを工夫する必要でてきて独自性を発揮する余地大いにあるし非同期島モデルにもつながる
     * (関係ないけど競技プログラミング自動化してみたいどこまで解けるか気になる)
+* 微分方程式の発見
+    * 今のプロンプトだと微分方程式を発見するのはきつそう
+    * プロンプト工夫するよりファインチューニングのがよさげ
+* あんまわかってないけどアイデア
+    * 突然変異演算子
+        * https://arxiv.org/abs/2304.03995
+    * アンサンブルなLLM探索
+        * https://sakana.ai/cycleqd-jp/
+    * アクティブラーニング
+        * https://arxiv.org/abs/2304.0399
+    * いろんなライブラリって、式の特性に応じて一番良いアルゴリズムをその場で選んでそれで探索したりする
+        * LLM-SRに限らないありとあらゆるSR手法を適応的に選択して行うフレームワークとしての開発
+        * でかいライブラリつくってしまう感じ、設計極めればいける
 
 # 今の課題に対して
 純粋なLLMとの応答意外でなんか改良したいらしい
