--- a/docs/自分の言葉で説明.md
+++ b/docs/自分の言葉で説明.md
@@ -24,7 +24,7 @@ and multi-island dynamic memory management for diverse exploration
 
 * 進化的アルゴリズム、島アルゴリズム
 * スコアのボルツマン分布に従って変異用サンプルを選択
-* オッカムの剃刀の原則でクラスタから関数を選択
+* オッカムの剃刀、MDLの原則でクラスタから関数を選択
 * LLMで変異
 * オプティマイザで係数同定
 * PPLというのをつかっためっちゃ詳しい評価をしてる
