IslandとEvolver書き間違えていたミスった

--- a/docs/設計.md
+++ b/docs/設計.md
@@ -420,6 +420,6 @@ def spawn_evolver(config: EvolverConfig) -> archipelago.Evolver:
 
 # おまけ
 
-サイクル単位での並列化しか行ってないですが、島毎に完全に並列化する場合でもIslandの実装のみ変更すれば対応可能です
+サイクル単位での並列化しか行ってないですが、島毎に完全に並列化する場合でもEvolverの実装のみ変更すれば対応可能です
 
 島ごとの進化の追跡や、ファインチューニング用のデータセットの自動生成を行いたい場合、まずイベントの型を見直して必要な情報をpayloadで渡すようにした後、プロファイラを正しく実装すれば対応可能です
