ちょっと書いた。試験終わったし個人的な改良どんどん加えていきたい

--- a/docs/事業の観点での説明.md
+++ b/docs/事業の観点での説明.md
@@ -76,6 +76,7 @@ evaluateをGPUでやる場合は意味ない、cpuでやる場合ちょっと意
     * 既存のLLMをつかってファインチューニング
     * AI Agentの独自性と言えばこれ、Takumiを参考にできないか考えてる
     * プロンプトの改良で何とかなってるのでまだ改良点思い浮かんでない
+    * 探索の過程がそのままファインチューニングとかトレーニングのデータセットのなるって言い忘れていた
 * Lazy Evalulator
     * データセットがあるときという指示がでてはいるけど、これは個人的にもやりたい
     * SHGの広帯域化のように、データセット無くてもLLM-SRで関数発見したいユースケースあるので、需要拡大
